--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -10,7 +10,7 @@
   color: rgb(53, 53, 53);
 }
 
-.sign__form input {
+.sign__form input, .sign__form select {
   height: 50px;
   font-size: 1.2em;
   border: 2px solid rgb(53, 53, 53);
@@ -20,7 +20,7 @@
 .sign__form button {
   margin: auto;
   color: white;
-  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.27);
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.27);  
   width: 260px;
   text-transform: uppercase;
   padding-right: 8px;
@@ -51,7 +51,7 @@
 }
 
 @media (min-width: 1000px) {
-  .sign__form input {
+  .sign__form input, .sign__form select {
     margin: 0 8em 2em 8em;
   }
   .sign__form label {
